--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@
     margin-left: 10px;
   }
   .progress-container .title{
+      padding-top: 5px;
       margin-left: 37%;
       margin-bottom: 5px;
   }
